# verdict-bench

./: .gitattributes  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  NOTICE  PROVENANCE.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  trident-recovery-probe.yml  trident-recovery-release-probe.yml
benchmarks/: __init__.py
benchmarks/t5r/: README.md  __init__.py  __main__.py  agent.py  artifacts.py  budget.py  certification.py  cli.py  config.py  context.py  evaluate.py  fixtures.py  ledger.py  pricing.py  report.py  run_pilot.py  schema.py  source.py  splits.py  stats.py  tau_runtime.py
benchmarks/t5r/docs/: formal-contract.md  preregistration.md
benchmarks/t5r/patches/: tau2-v1.0.0-text-only-imports.patch
benchmarks/t5r/public_artifacts/sim-v0.1.0/: calls.jsonl  decisions.jsonl  events.jsonl  manifest.json  model_manifest.json  price_sheet.json  report.md  simulations.jsonl  source_lock.json  summary.json  task_splits.json
benchmarks/t5r/public_artifacts/sim-v0.1.0/site/: data.js  data.json  (+1 more)
benchmarks/t5r/schemas/: call-1.0.0.schema.json  decision-1.0.0.schema.json  event-1.0.0.schema.json  manifest-1.0.0.schema.json  model-manifest-1.0.0.schema.json  price-sheet-1.0.0.schema.json  source-lock-1.0.0.schema.json  task-result-1.0.0.schema.json
benchmarks/t5r/site/: app.js  index.html  styles.css
docs/: methodology.md  upstream-tau.md
site/: index.html  styles.css
tests/: test_t5r.py  test_t5r_certification.py  test_t5r_controls.py  test_t5r_tau_mock.py
tests/fixtures/: moonshot_parity_v1.json
(+1 files in other folders)
