[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verdict-bench"
version = "0.1.0"
description = "Certificate-bearing routing and evidence refusal for public agent workloads"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Verdict Layer" }]
keywords = ["agents", "evaluation", "benchmark", "e-process", "tau-bench"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["jsonschema>=4.20"]

[project.urls]
Homepage = "https://github.com/paulchum/verdict-bench"
Repository = "https://github.com/paulchum/verdict-bench"
Documentation = "https://paulchum.github.io/verdict-bench/"
Issues = "https://github.com/paulchum/verdict-bench/issues"

[project.scripts]
verdict-bench = "benchmarks.t5r.cli:main"

[tool.setuptools.packages.find]
include = ["benchmarks*"]

[tool.setuptools.package-data]
"benchmarks.t5r" = [
  "docs/*.md",
  "patches/*.patch",
  "schemas/*.json",
  "site/*",
  "public_artifacts/**/*",
]
